change in filename

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -4,7 +4,7 @@
 <body>
 <applet width="400" height="300"
         code="eu.amaxilatis.ardoserial.MyApplet.class"
-        archive="./ardoSerial-jar-with-dependencies.jar">
+        archive="./ardoSerial-0.1-jar-with-dependencies.jar">
 </applet>
 
 
