--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,21 +1,67 @@
 <head>
     <title>@@NAME@@ (Version:@@VERSION@@, Build:@@BUILD@@)</title>
     <script type="text/javascript">
+        function scan(){
+        document.getElementById('scanning').style.visibility="visible";
+        document.getElementById('noscanning').style.visibility="hidden";
+        getFire();
+        }
         function connect(){
-            //alert('called connect ');
-            var applet = document.getElementById('myapplet');
-            applet.overrideConnect();
+        //alert('called connect ');
+        var applet = document.getElementById('myapplet');
+        var portslist= document.getElementById('ports');
+        var rateslist= document.getElementById('baudrates');
+        var port= portslist.options[portslist.selectedIndex].value;
+        var rate= rateslist.options[rateslist.selectedIndex].value;
+        //alert("overrideConnect('"+portslist.selectedIndex+"','"+rateslist.selectedIndex+"')");
+
+        applet.overrideConnect(portslist.selectedIndex,rateslist.selectedIndex);
+        }
+        function getFire(){
+        var applet = document.getElementById('myapplet');
+        var portslist= document.getElementById('ports');
+        var rateslist= document.getElementById('baudrates');
+        portsAvail=applet.getFire2().split(",");
+        for (var i =0 ;i< portsAvail.length ; i++){
+        portslist.options[i]=new Option(portsAvail[i],portsAvail[i],true,true);
+        }
+        ratesAvail=applet.getFireRates().split(",");
+        for (var i =0 ;i< ratesAvail.length ; i++){
+        //rateslist.options[i]=new Option(ratesAvail[i],ratesAvail[i],true,true);
+        }
         }
     </script>
 </head>
+
 <body>
-<applet width="400" height="300"
+<applet width="1" height="1"  id="myapplet" style="visibility:hidden;"
         code="eu.amaxilatis.ardoserial.MyApplet.class"
         archive="./ardoSerial-0.1-jar-with-dependencies.jar">
 </applet>
+
 <form>
- <input type="button" onclick='connect()' value='Connect..'/>
+    <div id="noscanning" style="visibility:opaque;">
+        <input type="button" onclick='scan()' value='Search for Arduino...'/>
+    </div>
+    <div id="scanning" style="visibility:hidden;">
+        <input type="button" onclick='connect()' value='Connect..'/>
+        <select id="ports">
+            <option></option>
+        </select>
+        <select id="baudrates">
+            <option>110</option>
+            <option>300</option>
+            <option>600</option>
+            <option>1200</option>
+            <option>4800</option>
+            <option selected="true">9600</option>
+            <option>14400</option>
+            <option>19200</option>
+            <option>38400</option>
+            <option>115200</option>
+            <option>128000</option>
+            <option>256000</option>
+        </select>
+    </div>
 </form>
-
-
 </body>
