change package to codebender

--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
 
 <body>
 <applet width="1" height="1" id="myapplet" style="visibility:hidden;"
-        code="eu.amaxilatis.ardoserial.MyApplet.class"
+        code="eu.amaxilatis.codebender.MyApplet.class"
         archive="./target/ardoSerial-0.1-jar-with-dependencies.jar">
 </applet>
 
