change package to codebender

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -35,7 +35,7 @@
 
 <body>
 <applet width="1" height="1" id="myapplet" style="visibility:hidden;"
-        code="eu.amaxilatis.codebender.MyApplet.class"
+        code="eu.amaxilatis.codebender.CodeBenderApplet.class"
         archive="./ardoSerial-0.1-jar-with-dependencies.jar">
 </applet>
 
